--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@netlify/functions": "^3.0.4",
     "@vueuse/core": "^13.0.0",
+    "node-fetch": "^3.3.2",
     "pinia": "^3.0.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@pinia/testing": "^1.0.0",
     "@testing-library/jest-dom": "^6.6.3",
+    "@types/node": "^22.14.1",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
